Fix name header on small screens
Hoping putting this in a flex box keeps it from wrapping in a weird way.

--- a/app/styles/layout/body.scss
+++ b/app/styles/layout/body.scss
@@ -20,6 +20,10 @@ h6 {
 
 h1 {
   @include font-size("xxl");
+
+  @media (max-width: 400px) {
+    @include font-size("xl");
+  }
 }
 
 h2 {
@@ -88,15 +92,17 @@ body {
   & > header {
     border-bottom: 1px solid var(--text-grey);
     grid-area: header;
-    & a {
-      vertical-align: middle;
+
+    a {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
     }
 
     & img {
       border-radius: 50%;
       padding: 5px;
-      width: 60px;
-      vertical-align: middle;
+      width: 50px;
     }
   }
 
